--- a/src/views/edit.html
+++ b/src/views/edit.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 	<title>edit</title>
-	<style type="text/css" link="/static/js/edit.css"></style>
+	<link rel="stylesheet" type="text/css" href="/static/edit.css">
 </head>
 <body>
-Edit
 	<script type="text/javascript" src="/static/js/edit.js"></script>
 </body>
 </html>
