--- a/src/static/js/common/global.css
+++ b/src/static/js/common/global.css
@@ -16,3 +16,24 @@ a:hover { text-decoration:none; color: #07b;}
 /*layout*/
 .clearfix { }
 .clearfix:after { display:table; content:''; clear:both; }
+
+.ant-layout {
+	background: #fff;
+}
+
+@font-face {
+  font-family: 'iconfont';
+  src: url('../../iconfont/iconfont.eot');
+  src: url('../../iconfont/iconfont.eot?#iefix') format('embedded-opentype'),
+  url('../../iconfont/iconfont.woff') format('woff'),
+  url('../../iconfont/iconfont.ttf') format('truetype'),
+  url('../../iconfont/iconfont.svg#iconfont') format('svg');
+}
+
+.iconfont{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
