--- a/src/static/js/page/docs/container/list.scss
+++ b/src/static/js/page/docs/container/list.scss
@@ -20,6 +20,13 @@
 				text-align: center;
 			}
 
+			.icon-edit {
+				position: absolute;
+				top: 10px;
+				right: 10px;
+				color: #fff;
+			}
+
 			.intro {
 				position: absolute;
 				bottom: 0;
