--- a/src/static/js/page/docs/container/list.scss
+++ b/src/static/js/page/docs/container/list.scss
@@ -18,6 +18,11 @@
 				font-size: 20px;
 				line-height: 40px;
 				text-align: center;
+				color: #fff;
+
+				&:hover {
+					color: #ddd;
+				}
 			}
 
 			.icon-edit {
