--- a/src/views/edit.html
+++ b/src/views/edit.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/edit.css">
 </head>
 <body>
+<%= docId %>
 	<script type="text/javascript" src="/static/js/edit.js"></script>
 </body>
 </html>
